module(
    name = "grpc-web",
    version = "1.6.0.rc1",
    compatibility_level = 1,
    repo_name = "com_github_grpc_grpc_web",
)

bazel_dep(name = "protobuf", version = "23.1", repo_name = "com_google_protobuf")
bazel_dep(name = "grpc", version = "1.65.0", repo_name = "com_github_grpc_grpc")
bazel_dep(name = "rules_cc", version = "0.0.2")
bazel_dep(name = "rules_proto", version = "6.0.2")

# Needed to resolve https://github.com/bazelbuild/bazel-central-registry/issues/2538.
single_version_override(
    module_name = "grpc-java",
    version = "1.64.0",
)
