## Copyright 2020 Google LLC
##
## Licensed under the Apache License, Version 2.0 (the "License");
## you may not use this file except in compliance with the License.
## You may obtain a copy of the License at
##
##     https://www.apache.org/licenses/LICENSE-2.0
##
## Unless required by applicable law or agreed to in writing, software
## distributed under the License is distributed on an "AS IS" BASIS,
## WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
## See the License for the specific language governing permissions and
## limitations under the License.

load("//bazel:defs.bzl", "grpc_web_toolchain")

# The toolchain type used to distinguish proto toolchains.
toolchain_type(
    name = "toolchain_type",
    visibility = ["//visibility:public"],
)

grpc_web_toolchain(
    name = "closure_toolchain_impl",
    generator = "//javascript/net/grpc/web:protoc-gen-grpc-web",
    runtime_library = "//javascript/net/grpc/web:closure_grpcweb_runtime",
)

toolchain(
    name = "closure_toolchain",
    toolchain = ":closure_toolchain_impl",
    toolchain_type = ":toolchain_type",
)
